@@ -1,8 +1,9 @@
 package net.jsunit;
- 
+
 import junit.framework.TestCase;
 import net.jsunit.configuration.Configuration;
 import net.jsunit.configuration.ConfigurationSource;
+import net.jsunit.logging.NoOpStatusLogger;
 import net.jsunit.model.TestRunResult;
 import net.jsunit.utility.XmlUtility;
 
@@ -14,19 +15,19 @@ public class DistributedTest extends TestCase {
         super(name);
     }
 
-	protected ConfigurationSource configurationSource() {
-		return Configuration.resolveSource();
-	}
+    protected ConfigurationSource configurationSource() {
+        return Configuration.resolveSource();
+    }
 
     public void testCollectResults() {
-    	manager = createTestRunManager();
-    	manager.runTests();
-    	TestRunResult result = manager.getTestRunResult();
-    	if (!result.wasSuccessful())
-    		fail(XmlUtility.asPrettyString(result.asXml()));
+        manager = createTestRunManager();
+        manager.runTests();
+        TestRunResult result = manager.getTestRunResult();
+        if (!result.wasSuccessful())
+            fail(XmlUtility.asPrettyString(result.asXml()));
     }
 
     protected DistributedTestRunManager createTestRunManager() {
-        return new DistributedTestRunManager(new Configuration(configurationSource()));
+        return new DistributedTestRunManager(new NoOpStatusLogger(), new Configuration(configurationSource()));
     }
 }
